k8s/logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
  namespace: pm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - name: logger
        image: docker.io/kaykit/pm-logger:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: logger
  namespace: pm
spec:
  selector:
    app: logger
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
