k8s/trainer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainer
  namespace: pm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trainer
  template:
    metadata:
      labels:
        app: trainer
    spec:
      containers:
      - name: trainer
        image: docker.io/kaykit/pm-trainer:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
        readinessProbe:
          httpGet:
            path: /health
            port: 8003
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8003
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - name: model-storage
          mountPath: /app/model_store
      volumes:
      - name: model-storage
        persistentVolumeClaim:
          claimName: model-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: trainer
  namespace: pm
spec:
  selector:
    app: trainer
  ports:
  - port: 8003
    targetPort: 8003
  type: ClusterIP
